# optical-testing-analysis-tools

./: LICENSE  pyproject.toml
characterization/pirt1280_scicam/: PTC_README.md  ptc_analysis.ipynb
src/analysis/core/: ptc_analyzer.py
src/analysis/utils/: image_database.py  image_stack_processing.py  utils.py
